<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center" >
        
        <RelativeLayout
        android:background="@drawable/dialog_bottom_holo_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
        android:id="@+id/linearLayout12"
		android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp" />
            </LinearLayout>

        
        <ImageButton
            android:id="@+id/button2_about"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:background="@drawable/selector"            android:src="@drawable/ic_menu_info_details"
			android:paddingRight="5dip"
			android:paddingBottom="8dip"
            android:onClick="onClick" 
            android:contentDescription="@string/about"/>
        
         <ImageButton
            android:id="@+id/button2_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:background="@drawable/selector" 
            android:src="@android:drawable/ic_menu_help"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/help"
            android:paddingBottom="10dip"
            android:onClick="onClick" />
        

    </RelativeLayout>
        

        

        <View
            android:id="@+id/view_image"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:background="@drawable/img_game_guess" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:layout_marginBottom="100dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:drawableRight="@android:drawable/ic_media_play"
            android:paddingLeft="20dip"
            android:paddingRight="10dip"
            android:text="@string/play"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:onClick="onClick" />
        
        
         
         <Button
            android:id="@+id/button2_rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			style="@style/KeyboardKeyLetter"
			android:textColor="@android:color/white" 
			android:drawableRight="@drawable/rate_star_med_off_holo_dark"
			android:layout_marginTop="5dip"
			android:paddingLeft="5dip"
			android:textSize="25sp"
            android:text="@string/rate_us"
            android:onClick="onClick" />
         
         
                  
         
    </LinearLayout>

</RelativeLayout>