<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dip"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:paddingTop="5dip"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <TextView
                android:id="@+id/title_dialog_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/well_done"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                  android:shadowDx="1"
                  android:shadowDy="1"
                  android:shadowRadius="10"
                android:textSize="26sp"
                
 />

        </LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="3dip"
    android:background="@drawable/btn_keyboard_key_light_pressed_holo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dip" 
            android:gravity="center">
            
            <View
                android:id="@+id/answer_img"
                 android:layout_width="200dip"
            android:layout_height="200dip"
            android:background="@android:drawable/ic_dialog_map" 
                />

              <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/answer_lable_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
				android:textColor="@android:color/white"
                android:text="@string/the_answer_is" />
            
            <TextView
                android:id="@+id/answer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0099CC"
                android:gravity="center"
                android:text="TextView" />
            
        </LinearLayout>
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

           <TextView
                android:id="@+id/coin_you_have_lable_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dip"
				android:textColor="@android:color/white"
                android:text="@string/you_have" />
            
            <TextView
                android:id="@+id/coin_you_have_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0099CC"
                android:gravity="center"
                android:paddingRight="5dip"
                />
            <View
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/ic_coins_s"
                android:gravity="center"
                 />
            
        </LinearLayout>
              
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center" >

            <Button
                android:id="@+id/next_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_next_game" 
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@drawable/btn_style"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>